idf_component_register(
  SRCS
    "app_main.c"
    "wifi.c"
    "http_server.c"
    "http_client_ext.c"
    "bme280.c"
  INCLUDE_DIRS "."
  REQUIRES
    driver          
    esp_wifi
    esp_event
    esp_netif
    nvs_flash
    esp_http_server
    esp_http_client
    esp-tls
    esp_https_server
)
